2001-06-07  Havoc Pennington  <hp@redhat.com>

	* tests/Makefile.am: add missing -I flag

	* gtk/Makefile.am: use @GLIB_MKENUMS@, @GLIB_GENMARSHAL@, etc.

	* configure.in: use pkg-config to see if GModule is
	supported; fix to properly turn on included loaders 
	when GModule isn't supported; don't use AC_CHECK_LIB 
	when libs are not installed yet

	* autogen.sh: add support for AUTOGEN_SUBDIR_MODE

	* Makefile.am (SUBDIRS): add m4macros subdir

	* gtk/Makefile.am: $(srcdir)/foo targets must be $(srcdir)/foo in
	dependencies also.

Wed Jun  6 19:31:11 2001  Jonathan Blandford  <jrb@redhat.com>

	* gtk/gtktreeview.c (gtk_tree_view_set_model): fix silly bug
	reported by "Padraig O'Briain" <Padraig.Obriain@Sun.COM>.

Wed Jun  6 20:01:38 2001  Jonathan Blandford  <jrb@redhat.com>

	* gtk/gtktreeview.c
	(gtk_tree_view_real_expand_collapse_cursor_row): Handle key
	bindings to expand and collapse rows.
	(gtk_tree_view_real_select_cursor_parent): New key binding.
	(gtk_tree_view_real_toggle_cursor_row): New key binding.

	* gtk/gtkmarshal.list: new
	marshaller. (VOID__BOOLEAN_BOOLEAN_BOOLEAN)

2001-06-06  Havoc Pennington  <hp@redhat.com>

	* gtk/gtkrange.c (gtk_range_class_init): add "inverted" property

	* gtk/gtkscale.c (gtk_scale_class_init): Change Page Up and Page
	Down to move visually rather than logically, since it confuses 
	people. Add -/+ and Ctrl--/+ bindings for logical movement.

Wed Jun  6 10:34:42 2001  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtktooltips.h: Include gtkwidget.h 
	(#55798, Karl Nelson)

	* gdk/x11/gdkwindow-x11.c (utf8_is_latin1): 0xff is
	a valid latin-1 character. (Marc Lehmann, #35467)

	* gdk/x11/gdkwindow-x11.c: Fix minor typo in comment. 
	(Marc Lehmann, #35467)
	
2001-06-05  Alex Larsson  <alexl@redhat.com>

	* demos/gtk-demo/appwindow.c (do_appwindow):
	Don't swap the order of the args to gtk_widget_destroyed.

	* tests/testgtk.c (destroy_properties):
	Don't crash when the properties window is destroyed.
